<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="70dp">

    <RelativeLayout
        android:id="@+id/drawer"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/circle"
            android:backgroundTint="?colorSurface"
            android:antialias="true"/>

        <ImageView
            android:layout_width="235dp"
            android:layout_height="70dp"
            android:background="?colorSurface"/>

        <RelativeLayout
            android:id="@+id/card3layout"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginStart="35dp">

            <!-- Card contents. -->

            <TextView
                android:id="@+id/textViewTripNum"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="0"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textViewChargeNum"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="0"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textViewRangeNum"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="0"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textViewTotalNum"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="0"
                android:textColor="?colorPrimary"
                android:textSize="18sp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textViewTrip"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/trip"
                android:textColor="?colorPrimary"
                android:textSize="12sp"
                android:layout_marginStart="0dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewCharge"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/charge"
                android:textColor="?colorPrimary"
                android:textSize="12sp"
                android:layout_marginStart="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewRange"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/range"
                android:textColor="?colorPrimary"
                android:textSize="12sp"
                android:layout_marginStart="100dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewTotal"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="?colorPrimary"
                android:textSize="12sp"
                android:layout_marginStart="150dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>


        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        android:backgroundTint="?colorSurface"
        android:antialias="true">
    
        <com.github.lzyzsd.circleprogress.DonutProgress
            android:id="@+id/donut"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            custom:donut_progress="70"
            custom:donut_text_size="15dp"
            custom:donut_text="0%"
            custom:donut_finished_stroke_width="3dp"
            custom:donut_unfinished_stroke_width="3dp"/>
    
    </RelativeLayout>
</RelativeLayout>